# CppTemplate

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  OneTestSuite.cpp  SimpleMockTest.cpp  main.cpp
tools/clion_template/: TestFixtureTemplate.txt
